derive/tests/snapshots/wrapper_optional_index/Reminder/create_reminder.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Create a row in the `reminder` table.
    pub fn create_reminder<'a>(
        &'a self,
        reminder: CreateReminder,
    ) -> Result<Reminder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let id = u64::default();
        let acknowledged_at = reminder.acknowledged_at;
        let due_at = reminder.due_at;
        let due_at = due_at.map(|value| Into::<ReminderDueAt>::into(value).value());
        let reminder = Reminder {
            id,
            acknowledged_at,
            due_at,
        };
        match self.db().reminder().try_insert(reminder.clone()) {
            Ok(entity) => Ok(entity),
            Err(error) => {
                match error {
                    ::spacetimedb::TryInsertError::UniqueConstraintViolation(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::UniqueConstraintViolation {
                            table_name: "reminder".into(),
                            action: crate::spacetimedsl::error::Action::Create,
                            error_from: crate::spacetimedsl::error::ErrorFrom::SpacetimeDB,
                            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                            column_names_and_row_values: format!(
                                "{{ id : {} }}", reminder.id
                            )
                                .into(),
                        })
                    }
                    ::spacetimedb::TryInsertError::AutoIncOverflow(_) => {
                        Err(crate::spacetimedsl::error::SpacetimeDSLError::AutoIncOverflow {
                            table_name: "reminder".into(),
                        })
                    }
                }
            }
        }
    }
}
