derive/tests/snapshots/wrapper_optional_index/Reminder/get_all_reminders.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `reminder` table.
    pub fn get_all_reminders<'a>(&'a self) -> impl Iterator<Item = Reminder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().reminder().iter()
    }
}
