derive/tests/snapshots/wrapper_optional_index/Reminder/get_reminder_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Reminder` from the `reminder` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_reminder_by_id<'a>(
        &'a self,
        id: impl Into<ReminderId> + Clone,
    ) -> Result<Reminder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().reminder().id().find(id.clone().into().value()) {
            Some(reminder) => Ok(reminder),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "reminder".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to get a `Reminder` from the `reminder` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn get_reminder_by_id<'a>(
        &'a self,
        id: impl Into<ReminderId> + Clone,
    ) -> Result<Reminder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        match self.db().reminder().id().find(id.clone().into().value()) {
            Some(reminder) => Ok(reminder),
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "reminder".into(),
                    column_names_and_row_values: format!(
                        "{{ id : {} }}", id.clone().into().value()
                    )
                        .into(),
                });
            }
        }
    }
}
