derive/tests/snapshots/wrapper_optional_index/Reminder/get_reminders_by_acknowledged_at.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Reminder` iterator that contains all rows in the `reminder` table whose value matches the value from the single-column btree index on the `acknowledged_at` column.
    pub fn get_reminders_by_acknowledged_at<'a>(
        &'a self,
        acknowledged_at: &impl Into<Option<ReminderAcknowledgedAt>>,
    ) -> impl Iterator<Item = Reminder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let acknowledged_at = match acknowledged_at.into() {
            None => None,
            Some(acknowledged_at) => {
                Into::<ReminderAcknowledgedAt>::into(acknowledged_at).value()
            }
        };
        self.db().reminder().acknowledged_at().filter(acknowledged_at)
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Reminder` iterator that contains all rows in the `reminder` table whose value matches the value from the single-column btree index on the `acknowledged_at` column.
    pub fn get_reminders_by_acknowledged_at<'a>(
        &'a self,
        acknowledged_at: &impl Into<Option<ReminderAcknowledgedAt>>,
    ) -> impl Iterator<Item = Reminder> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let acknowledged_at = match acknowledged_at.into() {
            None => None,
            Some(acknowledged_at) => {
                Into::<ReminderAcknowledgedAt>::into(acknowledged_at).value()
            }
        };
        self.db().reminder().acknowledged_at().filter(acknowledged_at)
    }
}
