derive/tests/snapshots/wrapper_optional_index/Reminder/update_reminder_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to update a `Reminder` row of the `reminder` table whose value matches the value from the unique single-column btree index on the `id` column.*/
    pub fn update_reminder_by_id<'a>(
        &'a self,
        reminder: Reminder,
    ) -> Result<Reminder, crate::spacetimedsl::error::SpacetimeDSLError> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        let mut reminder = reminder;
        let reminder = self.db().reminder().id().update(reminder);
        Ok(reminder)
    }
}
